@@ -1,9 +1,6 @@
 #!/bin/sh
 set -e
 
-export JAVA_TOOL_OPTIONS="${JAVA_TOOL_OPTIONS:-} -XX:+ExitOnOutOfMemoryError -XX:+UseCompactObjectHeaders -XX:+UseShenandoahGC"
-
-
 CONFIG_ARGS=""
 if [ -n "${SPRING_CONFIG_LOCATION:-}" ]; then
   CONFIG_ARGS="--spring.config.location=${SPRING_CONFIG_LOCATION}"
@@ -11,7 +8,7 @@ elif [ -f "/app/config/application.properties" ] || [ -f "/app/application.prope
   CONFIG_ARGS="--spring.config.additional-location=file:/app/config/,file:/app/"
 fi
 
-java -jar /app/oops.jar ${CONFIG_ARGS} --server.port=${BACKEND_PORT:-8080} &
+/app/oops ${CONFIG_ARGS} --server.port=${BACKEND_PORT:-8080} &
 BACK_PID=$!
 
 cd /app/web
